ingnition of app

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>namaste javascript</title>
-  <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-<script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+  
 <link rel="stylesheet" href="./index.css">
 </head>
 <body>
@@ -18,7 +17,7 @@
   </Script> -->
   
 
-<script src="./App.js">
+<script type="module" src="./App.js">
 
 </script>
 </body>
