--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-  <div id="root"></div>
+  <div id="root">
+    <h1>Akshay is here!</h1>
+  </div>
   <!-- <Script>
     const heading = document.createElement("h1");
     heading.innerHTML="Hello World from java Script";
